--- a/sass/home.scss
+++ b/sass/home.scss
@@ -113,6 +113,8 @@ main{
             padding: 20px 0px 50px 0px;
         }
         .carrusel{
+            width: 90%;
+            margin: auto;
             position: relative;
             .destacados{
                 position: relative;
@@ -134,35 +136,41 @@ main{
                 outline: none;
                 cursor: pointer;
                 .carrusel-arrow{
+                    color: #444;
                     opacity: 0.5;
                     font-size: 1.5rem;
                     transition: opacity 0.5s;
                 }
                 &:hover .carrusel-arrow{
+                    color:#a80000;
                     opacity: 1;
                 }
             }
             .carrusel-anterior{
-                left: 20px;
+                left: -20px;
             }
             .carrusel-siguiente{
-                right: 20px;
+                right: -20px;
             }
         }
         .dots{
+            align-items: center;
             .glider-dot{
                 display: block;
-                width: 30px;
-                height: 4px;
-                background: #000000;
+                width: 8px;
+                height: 8px;
+                background:#444;
                 opacity: 0.5;
-                border-radius: 0;
+                border-radius: 50%;
                 transition: opacity 0.5s;
                 &:hover{
                     opacity: 1;
                 }
             }
             .glider-dot.active{
+                width: 12px;
+                height: 12px;
+                background: #a80000;
                 opacity: 1;
             }
         }
