--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -4,6 +4,7 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
 @import 'general';
 @import 'loader';
+@import 'whatsapp';
 @import 'nav';
 @import 'home';
 @import 'footer';
