--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -37,6 +37,7 @@
         padding: 10px 0px 20px 0px;
         color: #000000;
         .footerDisen{
+            margin-right: 50px;
             a{
             font-size: 1.5rem;
             font-family: Pablo;
